--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -552,7 +552,7 @@
     "Accepted": "Accepted",
     "File Name": "File Name",
     "File Size": "File Size",
-    "State\/Province": "State\/Province",
+    "State/Province": "State/Province",
     "Background Color": "Background Color",
     "Change Status": "Change Status",
     "Contact Info": "Contact Info",
@@ -978,7 +978,7 @@
     "Failed to upgrade plan": "Failed to upgrade plan",
     "File Type": "File Type",
     "Flat Amount": "Flat Amount",
-    "For server-side API integration, use your Private Access Token (NOT your public key). You can find this in your MercadoPago Developer Dashboard under Credentials > Production\/Test Credentials > Access token.": "For server-side API integration, use your Private Access Token (NOT your public key). You can find this in your MercadoPago Developer Dashboard under Credentials > Production\/Test Credentials > Access token.",
+    "For server-side API integration, use your Private Access Token (NOT your public key). You can find this in your MercadoPago Developer Dashboard under Credentials > Production/Test Credentials > Access token.": "For server-side API integration, use your Private Access Token (NOT your public key). You can find this in your MercadoPago Developer Dashboard under Credentials > Production/Test Credentials > Access token.",
     "GB": "GB",
     "Get started by uploading your first media file": "Get started by uploading your first media file",
     "Get your Mercado Pago API credentials from your": "Get your Mercado Pago API credentials from your",
@@ -1541,7 +1541,7 @@
     "Manage application screenshots": "Manage application screenshots",
     "Manage webhooks for external integrations": "Manage webhooks for external integrations",
     "Marketing Copy": "Marketing Copy",
-    "Mastercard Credit\/Debit Cards": "Mastercard Credit\/Debit Cards",
+    "Mastercard Credit/Debit Cards": "Mastercard Credit/Debit Cards",
     "Max Result Length": "Max Result Length",
     "Media deleted successfully": "Media deleted successfully",
     "Midtrans Payment": "Midtrans Payment",
@@ -1848,7 +1848,7 @@
     "Users who registered using your referral code": "Users who registered using your referral code",
     "Users with Plans": "Users with Plans",
     "View Landing Page": "View Landing Page",
-    "Visa Credit\/Debit Cards": "Visa Credit\/Debit Cards",
+    "Visa Credit/Debit Cards": "Visa Credit/Debit Cards",
     "Want to Join Our Team?": "Want to Join Our Team?",
     "We typically respond within 24 hours...": "We typically respond within 24 hours...",
     "We're a diverse team of innovators...": "We're a diverse team of innovators...",
@@ -1893,7 +1893,7 @@
     "Your trial period has expired. Please subscribe to a plan to continue.": "Your trial period has expired. Please subscribe to a plan to continue.",
     "billing": "billing",
     "cURL Error: ": "cURL Error: ",
-    "prod\/test": "prod\/test",
+    "prod/test": "prod/test",
     "support@company.com": "support@company.com",
     "templates": "templates",
     "toyyibPay": "toyyibPay",
@@ -2265,7 +2265,7 @@
     "Allowances": "Allowances",
     "Already clocked in today.": "Already clocked in today.",
     "Already clocked out today.": "Already clocked out today.",
-    "Amount\/Percentage": "Amount\/Percentage",
+    "Amount/Percentage": "Amount/Percentage",
     "Announcement Dashboard": "Announcement Dashboard",
     "Announcement Statistics": "Announcement Statistics",
     "Announcement created successfully": "Announcement created successfully",
@@ -2371,7 +2371,7 @@
     "Back to Reviews": "Back to Reviews",
     "Back to Salaries": "Back to Salaries",
     "Back to Trips": "Back to Trips",
-    "Bank Identifier Code (BIC\/SWIFT)": "Bank Identifier Code (BIC\/SWIFT)",
+    "Bank Identifier Code (BIC/SWIFT)": "Bank Identifier Code (BIC/SWIFT)",
     "Banking Information": "Banking Information",
     "Base Salary": "Base Salary",
     "Bi-Weekly": "Bi-Weekly",
@@ -3103,7 +3103,7 @@
     "Mark this training as mandatory for employees": "Mark this training as mandatory for employees",
     "Max Budget": "Max Budget",
     "Max Days Per Application": "Max Days Per Application",
-    "Max Days\/Year": "Max Days\/Year",
+    "Max Days/Year": "Max Days/Year",
     "Max Experience (Years)": "Max Experience (Years)",
     "Max Score": "Max Score",
     "Max file size: 10MB. Supported formats: PDF, DOC, DOCX, XLS, XLSX, PPT, PPTX, TXT": "Max file size: 10MB. Supported formats: PDF, DOC, DOCX, XLS, XLSX, PPT, PPTX, TXT",
@@ -3291,7 +3291,7 @@
     "Policy Updates": "Policy Updates",
     "Policy Violation": "Policy Violation",
     "Portfolio URL": "Portfolio URL",
-    "Postal\/Zip Code": "Postal\/Zip Code",
+    "Postal/Zip Code": "Postal/Zip Code",
     "Practical": "Practical",
     "Prerequisites": "Prerequisites",
     "Present": "Present",
@@ -3918,7 +3918,7 @@
     "You do not have permission to view this review": "You do not have permission to view this review",
     "You do not have permission to view this training program": "You do not have permission to view this training program",
     "You do not have permission to view this training session": "You do not have permission to view this training session",
-    "ZIP\/Postal Code": "ZIP\/Postal Code",
+    "ZIP/Postal Code": "ZIP/Postal Code",
     "acknowledgments": "acknowledgments",
     "action items": "action items",
     "announcements": "announcements",
@@ -3999,5 +3999,103 @@
     "trips": "trips",
     "variables": "variables",
     "warnings": "warnings",
-    "📢 New: Smart Leave & Attendance Tracking Launched!": "📢 New: Smart Leave & Attendance Tracking Launched!"
+    "📢 New: Smart Leave & Attendance Tracking Launched!": "📢 New: Smart Leave & Attendance Tracking Launched!",
+    "HR Reports": "HR Reports",
+    "Absence Report": "Absence Report",
+    "Monitor employee absences and trends": "Monitor employee absences and trends",
+    "All recorded absences for the selected range": "All recorded absences for the selected range",
+    "Employees with at least one recorded absence": "Employees with at least one recorded absence",
+    "Avg Absences / Employee": "Avg Absences / Employee",
+    "Average count per impacted employee": "Average count per impacted employee",
+    "Absences recorded this month": "Absences recorded this month",
+    "No absences found for the selected filters": "No absences found for the selected filters",
+    "Track repeated late arrivals and intervene early": "Track repeated late arrivals and intervene early",
+    "Lateness Report": "Lateness Report",
+    "Late Arrivals": "Late Arrivals",
+    "Occurrences within the selected range": "Occurrences within the selected range",
+    "Average occurrences per employee": "Average occurrences per employee",
+    "Late arrivals in the current month": "Late arrivals in the current month",
+    "Late arrival recorded": "Late arrival recorded",
+    "No late arrivals found for the selected filters": "No late arrivals found for the selected filters",
+    "Starts at": "Starts at",
+    "Employees reporting late at least once": "Employees reporting late at least once",
+    "Understand leave utilization across your organization": "Understand leave utilization across your organization",
+    "Total Requests": "Total Requests",
+    "All leave requests in this window": "All leave requests in this window",
+    "Approved Requests": "Approved Requests",
+    "Requests that were approved": "Requests that were approved",
+    "Awaiting review or approval": "Awaiting review or approval",
+    "Total Leave Days": "Total Leave Days",
+    "Days of leave requested": "Days of leave requested",
+    "No leave requests found for the selected filters": "No leave requests found for the selected filters",
+    "leave requests": "leave requests",
+    "Validate and follow up on medical excused absences": "Validate and follow up on medical excused absences",
+    "Medical Excuse Report": "Medical Excuse Report",
+    "Total Medical Excuses": "Total Medical Excuses",
+    "All requests tagged as medical": "All requests tagged as medical",
+    "Pending Review": "Pending Review",
+    "Waiting on medical verification": "Waiting on medical verification",
+    "Medical Evidence": "Medical Evidence",
+    "Provided": "Provided",
+    "Missing": "Missing",
+    "Medical excuse submitted": "Medical excuse submitted",
+    "No medical excuse requests found for the selected filters": "No medical excuse requests found for the selected filters",
+    "medical excuses": "medical excuses",
+    "Stay on top of disciplinary actions and follow-ups": "Stay on top of disciplinary actions and follow-ups",
+    "Warning Report": "Warning Report",
+    "Across the selected time range": "Across the selected time range",
+    "Open": "Open",
+    "Draft or issued warnings": "Draft or issued warnings",
+    "Warnings confirmed by employees": "Warnings confirmed by employees",
+    "Expired or elapsed warnings": "Expired or elapsed warnings",
+    "All Warning Types": "All Warning Types",
+    "No warnings found for the selected filters": "No warnings found for the selected filters",
+    "Identify contracts that need renewal or offboarding": "Identify contracts that need renewal or offboarding",
+    "Expired Contracts Report": "Expired Contracts Report",
+    "Expired Contracts": "Expired Contracts",
+    "Contracts already past their end date": "Contracts already past their end date",
+    "Expiring Soon": "Expiring Soon",
+    "Contracts ending within 30 days": "Contracts ending within 30 days",
+    "Average Tenure": "Average Tenure",
+    "Average contract duration (start to end)": "Average contract duration (start to end)",
+    "All Contract Types": "All Contract Types",
+    "End Date From": "End Date From",
+    "No expired contracts found for the selected filters": "No expired contracts found for the selected filters",
+    "Measure progress on employee learning initiatives": "Measure progress on employee learning initiatives",
+    "Training Report": "Training Report",
+    "Assigned Trainings": "Assigned Trainings",
+    "Assignments created in this range": "Assignments created in this range",
+    "Employees that finished the training": "Employees that finished the training",
+    "Currently active trainings": "Currently active trainings",
+    "Marked as failed or incomplete": "Marked as failed or incomplete",
+    "No training records found for the selected filters": "No training records found for the selected filters",
+    "trainings": "trainings",
+    "Keep track of voluntary exits and follow-up tasks": "Keep track of voluntary exits and follow-up tasks",
+    "Resignation Report": "Resignation Report",
+    "Total Resignations": "Total Resignations",
+    "Submissions within the selected range": "Submissions within the selected range",
+    "Pending Approvals": "Pending Approvals",
+    "Awaiting approval or processing": "Awaiting approval or processing",
+    "Approved Resignations": "Approved Resignations",
+    "Approved exits pending completion": "Approved exits pending completion",
+    "Submitted From": "Submitted From",
+    "Submitted To": "Submitted To",
+    "No resignations found for the selected filters": "No resignations found for the selected filters",
+    "Turnover Report": "Turnover Report",
+    "Understand how hiring and separations impact your workforce": "Understand how hiring and separations impact your workforce",
+    "Current Headcount": "Current Headcount",
+    "Active employees within the company": "Active employees within the company",
+    "Average Headcount": "Average Headcount",
+    "Average for the selected range": "Average for the selected range",
+    "New Hires": "New Hires",
+    "Employees who joined in this period": "Employees who joined in this period",
+    "Separations": "Separations",
+    "Resignations and terminations": "Resignations and terminations",
+    "No data available for the selected filters": "No data available for the selected filters",
+    "Recent Hires": "Recent Hires",
+    "No recent hires found": "No recent hires found",
+    "Recent Separations": "Recent Separations",
+    "No recent separations found": "No recent separations found",
+    "Hires": "Hires",
+    "Turnover Rate": "Turnover Rate"
 }
